<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.intern.ILoveZappos.ProductActivity">

    <data>
        <variable
            name="result"
            type="com.intern.ILoveZappos.Result" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:contentDescription="@string/thumbnail"
            android:layout_width="275dp"
            android:layout_height="275dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="300dp"
            android:textAlignment="center"
            android:textSize="25sp"
            android:id="@+id/product_name"
            android:text="@={result.productName}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_name"
            android:layout_alignParentStart="true"
            android:id="@+id/name_text"
            android:text="@string/name_text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/name_text"
            android:layout_toEndOf="@id/name_text"
            android:id="@+id/name"
            android:text="@={result.brandName}"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_text"
            android:id="@+id/price_text"
            android:text="@string/price_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/price_text"
            android:layout_toEndOf="@id/price_text"
            android:id="@+id/price"
            android:text="@={result.originalPrice}" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/price_text"
            android:id="@+id/current_text"
            android:text="@string/current_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/current_text"
            android:layout_toEndOf="@id/current_text"
            android:id="@+id/current"
            android:text="@={result.price}" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/sale_text"
            android:textSize="20sp"
            android:text="@string/sale_text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_above="@id/sale_text"
            android:textSize="40sp"
            android:text="@={result.percentOff}"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/product_name"
            android:id="@+id/id"
            android:text="@={result.productId}"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/id"
            android:layout_toStartOf="@id/id"
            android:id="@+id/id_text"
            android:text="@string/id_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id"
            android:layout_alignParentEnd="true"
            android:id="@+id/style_id"
            android:text="@={result.styleId}"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/style_id"
            android:layout_alignBaseline="@id/style_id"
            android:id="@+id/style_id_text"
            android:text="@string/style_id_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/style_id"
            android:layout_alignParentEnd="true"
            android:id="@+id/color_id"
            android:text="@={result.colorId}"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/color_id"
            android:layout_toStartOf="@id/color_id"
            android:id="@+id/color_id_text"
            android:text="@string/color_id_text"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/cart_plus" />

    </RelativeLayout>



 </layout>
